# PersonalWebsite

./: .gitignore  README.md
src-django/: Makefile  pyproject.toml  requirements.txt
src-django/src/: manage.py
src-django/src/alex_website/: asgi.py  settings.py  urls.py  wsgi.py
src-django/src/alex_website.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src-django/src/api/: urls.py
src-django/src/frontend/: urls.py
src-django/src/frontend/templates/: index.html
src-django/src/frontend/templatetags/: static_vite_css.py  static_vite_js.py
src-django/src/website/: settings.py  urls.py
src-vite/: eslint.config.js  package-lock.json  package.json  vite.config.ts
src-vite/src/: App.css  App.tsx  Layout.tsx  main.tsx
src-vite/src/components/: index.ts
src-vite/src/components/app/: index.ts
src-vite/src/components/app/footer/: Footer.tsx
src-vite/src/components/app/header/: Header.tsx  Navbar.tsx
src-vite/src/components/header/: Header.tsx  Navbar.tsx
src-vite/src/components/ui/: index.ts
src-vite/src/components/ui/structure/: Panel.tsx
src-vite/src/components/ui/utilities/: Colored.tsx  Link.tsx
src-vite/src/pages/: index.ts
src-vite/src/pages/hero/: ContactForm.tsx  Hero.tsx  Timeline.tsx
src-vite/src/themes/: Fonts.tsx  Light.tsx  index.ts
src-vite/tsconfig/: tsconfig.app.json  tsconfig.node.json
