[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "alex-website"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nexzones.settings"
addopts = "--cov=./src"
python_files = ["test_*.py", "*_test.py", "__tests__/*.py"]
